--- a/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -623,5 +623,10 @@
   "mod.chiselsandbits.keys.key.measuring-tape.reset": "Reset measuring tape measurements",
   "mod.chiselsandbits.keys.key.undo": "Undo last chiseling operation",
   "mod.chiselsandbits.keys.key.redo": "Redo last undone chiseling operation",
-  "mod.chiselsandbits.test": "Placeholder text during development"
+  "mod.chiselsandbits.test": "Placeholder text during development",
+  "mod.chiselsandbits.pattern.modification.group.mirror": "Mirror",
+  "mod.chiselsandbits.pattern.modification.group.rotate": "Rotate",
+  "mod.chiselsandbits.pattern.modification.across.axis.x": "X",
+  "mod.chiselsandbits.pattern.modification.across.axis.y": "Y",
+  "mod.chiselsandbits.pattern.modification.across.axis.z": "Z"
 }
