Implement an unsealing option so that sealed patterns can be remodified.

--- a/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -23,6 +23,7 @@
   "item.chiselsandbits.bit_bag": "Chiseled Bit Bag",
   "item.chiselsandbits.bit_bag_dyed": "Chiseled Bit Bag",
   "item.chiselsandbits.wrench": "Wooden Wrench",
+  "item.chiselsandbits.unseal": "Sealant remover",
   "item.chiselsandbits.positiveprint": "Positive Chisel Design",
   "item.chiselsandbits.positiveprint_written": "Positive Chisel Design - Written",
   "item.chiselsandbits.negativeprint": "Negative Chisel Design",
@@ -166,6 +167,8 @@
   "mod.chiselsandbits.help.quill.long": "",
   "mod.chiselsandbits.help.sealant": "The sealant can be used to make simple patterns last.\nProtecting the information written on them.\nHold right click while holding a simple pattern in your other hand to apply the seal.",
   "mod.chiselsandbits.help.sealant.long": "",
+  "mod.chiselsandbits.help.unseal": "The sealant remover can be used to remove the seal from a sealed pattern.\nThis removes the protection from the pattern and will allow you to modify a pattern again.\nThe downside of this procedure is that the pattern becomes fragile and can then again only be used once.\nHold right click while holding a sealed pattern in your other hand to remove the seal.",
+  "mod.chiselsandbits.help.unseal.long": "",
   "mod.chiselsandbits.pretty.axis-y": "Up/Down",
   "mod.chiselsandbits.pretty.axis-x": "East/West",
   "mod.chiselsandbits.pretty.axis-z": "North/South",
