Implemented connected material and replace chisel modes.

--- a/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -75,6 +75,38 @@
   "mod.chiselsandbits.chiselmode.sphere_small": "1/4",
   "mod.chiselsandbits.chiselmode.sphere_medium": "1/2",
   "mod.chiselsandbits.chiselmode.sphere_large": "Full",
+  "mod.chiselsandbits.chiselmode.replace": "Replace",
+
+  "mod.chiselsandbits.chiselmode.multiline.single": "Single\nBit",
+  "mod.chiselsandbits.chiselmode.multiline.snap": "Grid\nSnapped\nCube",
+  "mod.chiselsandbits.chiselmode.multiline.sphere": "Sphere",
+  "mod.chiselsandbits.chiselmode.multiline.snap2": "1/8",
+  "mod.chiselsandbits.chiselmode.multiline.snap4": "1/4",
+  "mod.chiselsandbits.chiselmode.multiline.snap8": "1/2",
+  "mod.chiselsandbits.chiselmode.multiline.line": "Line",
+  "mod.chiselsandbits.chiselmode.multiline.line1": "1 x 1",
+  "mod.chiselsandbits.chiselmode.multiline.line2": "2 x 2",
+  "mod.chiselsandbits.chiselmode.multiline.line4": "4 x 4",
+  "mod.chiselsandbits.chiselmode.multiline.line8": "8 x 8",
+  "mod.chiselsandbits.chiselmode.multiline.plane": "Plane",
+  "mod.chiselsandbits.chiselmode.multiline.plane1": "1 x 1",
+  "mod.chiselsandbits.chiselmode.multiline.plane2": "2 x 2",
+  "mod.chiselsandbits.chiselmode.multiline.plane4": "4 x 4",
+  "mod.chiselsandbits.chiselmode.multiline.plane8": "8 x 8",
+  "mod.chiselsandbits.chiselmode.multiline.connected_plane": "Connected\nPlane",
+  "mod.chiselsandbits.chiselmode.multiline.connected_material": "Connected\nMaterial",
+  "mod.chiselsandbits.chiselmode.multiline.cubed": "Cube",
+  "mod.chiselsandbits.chiselmode.multiline.cube_small": "Small",
+  "mod.chiselsandbits.chiselmode.multiline.cube_medium": "Medium",
+  "mod.chiselsandbits.chiselmode.multiline.cube_large": "Large",
+  "mod.chiselsandbits.chiselmode.multiline.drawn_region": "Drawn\nRegion",
+  "mod.chiselsandbits.chiselmode.multiline.same_material": "Same\nMaterial",
+  "mod.chiselsandbits.chiselmode.multiline.sphere_small": "1/4",
+  "mod.chiselsandbits.chiselmode.multiline.sphere_medium": "1/2",
+  "mod.chiselsandbits.chiselmode.multiline.sphere_large": "Full",
+  "mod.chiselsandbits.chiselmode.multiline.replace": "Replace",
+  
+  
   "mod.chiselsandbits.bitoption.place": "Place",
   "mod.chiselsandbits.bitoption.replace": "Replace",
   "mod.chiselsandbits.chisel.support.already-chiseled": "Chiseling: Already Chiseled!",
@@ -122,18 +154,18 @@
   "mod.chiselsandbits.help.shiftdetails": "<Hold Shift For Details>",
   "mod.chiselsandbits.help.empty": "Empty",
   "mod.chiselsandbits.help.filled": "Filled",
-  "mod.chiselsandbits.help.chiseled_block": "{} to place\n{} to ignore block grid\nMouse Wheel to cycle placement rotation.",
+  "mod.chiselsandbits.help.chiseled_block": "%1$s to place\n%2$s to ignore block grid\nMouse Wheel to cycle placement rotation.",
   "mod.chiselsandbits.help.bit_bag": "Automatically re-stock, and store bits.",
-  "mod.chiselsandbits.help.wrench": "{} blocks to rotate.",
-  "mod.chiselsandbits.help.bit": "{} to chisel\n{} to place\nUse {} to display menu.",
-  "mod.chiselsandbits.help.positiveprint": "{} to write\n{} to chisel/place or Craft with bits/bags.\nMouse Wheel to cycle rotation\nUse {} to display menu.",
-  "mod.chiselsandbits.help.negativeprint": "{} to write\n{} to chisel.\nMouse Wheel to cycle rotation.",
-  "mod.chiselsandbits.help.mirrorprint": "{} the face you wish to mirror from\nCraft with positive/negative design to transfer.",
-  "mod.chiselsandbits.help.chisel": "{} to chisel\nUse {} to display menu.",
+  "mod.chiselsandbits.help.wrench": "%1$s blocks to rotate.",
+  "mod.chiselsandbits.help.bit": "%1$s to chisel\n%2$s to place\nUse %3$s to display menu.",
+  "mod.chiselsandbits.help.positiveprint": "%1$s to write\n%2$s to chisel/place or Craft with bits/bags.\nMouse Wheel to cycle rotation\nUse %3$s to display menu.",
+  "mod.chiselsandbits.help.negativeprint": "%1$s to write\n%2$s to chisel.\nMouse Wheel to cycle rotation.",
+  "mod.chiselsandbits.help.mirrorprint": "%1$s the face you wish to mirror from\nCraft with positive/negative design to transfer.",
+  "mod.chiselsandbits.help.chisel": "%1$s to chisel\nUse %2$s to display menu.",
   "mod.chiselsandbits.help.bitsaw": "Craft with Blocks or Chiseled blocks\nCut along any of the 3 axis.",
   "mod.chiselsandbits.help.bittank.empty": "Fill with fluid and extract bits.\nCurrently empty.",
-  "mod.chiselsandbits.help.bittank.full": "Fill with fluid and extract bits.\n Contains: {}.\n {} Bits remaining.",
-  "mod.chiselsandbits.help.tape_measure": "{} and drag to measure, again {} to save\n{} to clear\nUse {} to display menu.",
+  "mod.chiselsandbits.help.bittank.full": "Fill with fluid and extract bits.\n Contains: %1$s.\n %2$s Bits remaining.",
+  "mod.chiselsandbits.help.tape_measure": "%1$s and drag to measure, again %2$s to save\n%3$s to clear\nUse %4$s to display menu.",
   "mod.chiselsandbits.help.magnifying_glass": "Hover over block to check if compatible.",
   "mod.chiselsandbits.help.chiseled_block.long": "Left-click to place the block. Sneak while placing to ignore block grid. Shift + Mouse Wheel to cycle placement rotation.",
   "mod.chiselsandbits.help.bit_bag.long": "Automatically re-stocks, and store bits when you exceed or go under a stack in your inventory.\\n\\nCraft with any dye to color.",
