Implement configurable rendering system for the preview.

--- a/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -345,6 +345,38 @@
   "mod.chiselsandbits.config.client.performance.vertexformats.custom.comment": "Custom vertex formats related client performance configuration.",
   "mod.chiselsandbits.config.client.performance.vertexformats.custom.disabled": "Performance: Custom formats disabled",
   "mod.chiselsandbits.config.client.performance.vertexformats.custom.disabled.comment": "When enabled this prevents custom vertex formats from working.",
+  "mod.chiselsandbits.config.client.performance.faces": "Model Faces.",
+  "mod.chiselsandbits.config.client.performance.faces.cache": "Model Face Cache",
+  "mod.chiselsandbits.config.client.performance.faces.cache.comment": "This section configures options related to the cache for the model faces.",
+  "mod.chiselsandbits.config.client.performance.faces.cache.size": "Size",
+  "mod.chiselsandbits.config.client.performance.faces.cache.size.comment": "The size of the model face cache.",
+  "mod.chiselsandbits.config.client.performance.faces.comment": "This section configures options related to the performance of model face management.",
+  "mod.chiselsandbits.config.client.performance.models": "Performance - Model",
+  "mod.chiselsandbits.config.client.performance.models.cache": "Performance - Model - Cache",
+  "mod.chiselsandbits.config.client.performance.models.cache.comment": "Configuration entries related to the caches for models and their impact on performance.",
+  "mod.chiselsandbits.config.client.performance.models.cache.size": "Performance - Mode - Cache - Size",
+  "mod.chiselsandbits.config.client.performance.models.cache.size.comment": "The size of the model cache.",
+  "mod.chiselsandbits.config.client.performance.models.comment": "Configuration entries related to models and their impact on the performance.",
+  "mod.chiselsandbits.config.client.performance.models.builder": "Model Builder",
+  "mod.chiselsandbits.config.client.performance.models.builder.comment": "This section configures options related to the model building system.",
+  "mod.chiselsandbits.config.client.performance.models.builder.threadcount": "Thread count",
+  "mod.chiselsandbits.config.client.performance.models.builder.threadcount.comment": "The amount of threads to use to compute the models.",
+  "mod.chiselsandbits.config.client.settings": "Settings",
+  "mod.chiselsandbits.config.client.settings.clipboard": "Settings - Clipboard",
+  "mod.chiselsandbits.config.client.settings.clipboard.comment": "Configuration entries related to the settings of the clipboard.",
+  "mod.chiselsandbits.config.client.settings.comment": "Configuration entries related to the settings of gameplay aspects.",
+  "mod.chiselsandbits.config.client.settings.enable": "Settings - Feature States",
+  "mod.chiselsandbits.config.client.settings.enable.comment": "Configuration entries which can enable or disable certain gameplay aspects.",
+  "mod.chiselsandbits.config.client.settings.enable.toolbar": "Settings - Feature States - Toolbar Icons",
+  "mod.chiselsandbits.config.client.settings.enable.toolbar.comment": "Configuration entries related to feature state of the toolbar icons on tools.",
+  "mod.chiselsandbits.config.client.settings.radial": "Settings - Radial",
+  "mod.chiselsandbits.config.client.settings.radial.comment": "Configuration entries related to settings of the radial systems.",
+  "mod.chiselsandbits.config.client.settings.radial.menu": "Settings - Radial - Menu",
+  "mod.chiselsandbits.config.client.settings.radial.menu.comment": "Configuration entries related to the settings of the radial menu.",
+  "mod.chiselsandbits.config.client.settings.tape-measure": "Settings - Tape Measure",
+  "mod.chiselsandbits.config.client.settings.tape-measure.comment": "Configuration entries related to the settings of the tape measure.",
+  "mod.chiselsandbits.config.client.settings.undo": "Settings - Undo",
+  "mod.chiselsandbits.config.client.settings.undo.comment": "Configuration entries related to the undo system.",
   "mod.chiselsandbits.config.client.settings.chat-mode-notification": "Notification mode: Chat",
   "mod.chiselsandbits.config.client.settings.chat-mode-notification.comment": "When enabled notifies you of changes to for example tool modes in the chat.",
   "mod.chiselsandbits.config.client.settings.clipboard.add-broken-blocks": "Clipboard: Store broken chiseled blocks",
@@ -367,6 +399,18 @@
   "mod.chiselsandbits.config.client.settings.tape-measure.max-count.comment": "The maximum amount measurements stored before the oldest ones are removed.",
   "mod.chiselsandbits.config.client.settings.undo.max-count": "Maximum amount of undo operations",
   "mod.chiselsandbits.config.client.settings.undo.max-count.comment": "The maximum amount of undo operations that are kept in memory. If more operations are added to the undo list, the oldest operations are removed from the list.",
+  "mod.chiselsandbits.config.client.settings.preview": "Previews",
+  "mod.chiselsandbits.config.client.settings.preview.chisel": "Chiseling",
+  "mod.chiselsandbits.config.client.settings.preview.chisel.color": "Color",
+  "mod.chiselsandbits.config.client.settings.preview.chisel.color.comment": "The color of the chiseling preview border, if enabled.",
+  "mod.chiselsandbits.config.client.settings.preview.chisel.comment": "This section configures options related to the chiseling previews.",
+  "mod.chiselsandbits.config.client.settings.preview.comment": "This section configures options related to the chiseling and placement previews.",
+  "mod.chiselsandbits.config.client.settings.preview.placement": "Placement",
+  "mod.chiselsandbits.config.client.settings.preview.placement.color": "Color",
+  "mod.chiselsandbits.config.client.settings.preview.placement.color.comment": "The color of the placement preview border, if enabled.",
+  "mod.chiselsandbits.config.client.settings.preview.placement.comment": "This section configures options related to the placement previews.",
+  "mod.chiselsandbits.config.client.settings.preview.renderer": "The preview renderer.",
+  "mod.chiselsandbits.config.client.settings.preview.renderer.comment": "Defines what renderer to use in a ResourceLocation format. C&B by default supports: `chiselsandbits:default` and `chiselsandbits:noop`. Other addons might add additional options, consult their documentation for the required values.",
   "mod.chiselsandbits.config.common.help.enabled": "Help-tooltips: Enabled",
   "mod.chiselsandbits.config.common.help.enabled.comment": "Indicates if help tooltips are enabled or not.",
   "mod.chiselsandbits.config.common.performance.collisions.cache.size": "Collisions-cache: Size",
@@ -427,28 +471,8 @@
   "mod.chiselsandbits.config.server.troubleshooting.logging.eligibility-errors.comment": "When enabled logs errors that occur during compatibility analysis.",
   "mod.chiselsandbits.config.server.troubleshooting.logging.tile-errors": "Troubleshooting: Log tile access errors",
   "mod.chiselsandbits.config.server.troubleshooting.logging.tile-errors.comment": "When enabled logs errors that happen when accessing tile entities.",
-  "mod.chiselsandbits.config.client.performance.models": "Performance - Model",
-  "mod.chiselsandbits.config.client.performance.models.cache": "Performance - Model - Cache",
-  "mod.chiselsandbits.config.client.performance.models.cache.comment": "Configuration entries related to the caches for models and their impact on performance.",
-  "mod.chiselsandbits.config.client.performance.models.cache.size": "Performance - Mode - Cache - Size",
-  "mod.chiselsandbits.config.client.performance.models.cache.size.comment": "The size of the model cache.",
-  "mod.chiselsandbits.config.client.performance.models.comment": "Configuration entries related to models and their impact on the performance.",
-  "mod.chiselsandbits.config.client.settings": "Settings",
-  "mod.chiselsandbits.config.client.settings.clipboard": "Settings - Clipboard",
-  "mod.chiselsandbits.config.client.settings.clipboard.comment": "Configuration entries related to the settings of the clipboard.",
-  "mod.chiselsandbits.config.client.settings.comment": "Configuration entries related to the settings of gameplay aspects.",
-  "mod.chiselsandbits.config.client.settings.enable": "Settings - Feature States",
-  "mod.chiselsandbits.config.client.settings.enable.comment": "Configuration entries which can enable or disable certain gameplay aspects.",
-  "mod.chiselsandbits.config.client.settings.enable.toolbar": "Settings - Feature States - Toolbar Icons",
-  "mod.chiselsandbits.config.client.settings.enable.toolbar.comment": "Configuration entries related to feature state of the toolbar icons on tools.",
-  "mod.chiselsandbits.config.client.settings.radial": "Settings - Radial",
-  "mod.chiselsandbits.config.client.settings.radial.comment": "Configuration entries related to settings of the radial systems.",
-  "mod.chiselsandbits.config.client.settings.radial.menu": "Settings - Radial - Menu",
-  "mod.chiselsandbits.config.client.settings.radial.menu.comment": "Configuration entries related to the settings of the radial menu.",
-  "mod.chiselsandbits.config.client.settings.tape-measure": "Settings - Tape Measure",
-  "mod.chiselsandbits.config.client.settings.tape-measure.comment": "Configuration entries related to the settings of the tape measure.",
-  "mod.chiselsandbits.config.client.settings.undo": "Settings - Undo",
-  "mod.chiselsandbits.config.client.settings.undo.comment": "Configuration entries related to the undo system.",
+
+
   "mod.chiselsandbits.config.common": "Common configuration entries.",
   "mod.chiselsandbits.config.common.comment": "Contains non-synced configuration entries used both in the client as well as in the server.",
   "mod.chiselsandbits.config.common.help": "Help",
@@ -462,25 +486,25 @@
   "mod.chiselsandbits.config.common.performance": "Performance",
   "mod.chiselsandbits.config.common.performance.comment": "Configuration entries related to performance.",
   "mod.chiselsandbits.config.common.performance.common": "Performance - Common",
-  "mod.chiselsandbits.config.common.performance.common.comment": "",
-  "mod.chiselsandbits.config.common.performance.common.performance": "",
-  "mod.chiselsandbits.config.common.performance.common.performance.collisions": "",
-  "mod.chiselsandbits.config.common.performance.common.performance.collisions.cache": "",
-  "mod.chiselsandbits.config.common.performance.common.performance.collisions.cache.comment": "",
-  "mod.chiselsandbits.config.common.performance.common.performance.collisions.cache.size": "",
-  "mod.chiselsandbits.config.common.performance.common.performance.collisions.cache.size.comment": "",
-  "mod.chiselsandbits.config.common.performance.common.performance.collisions.comment": "",
-  "mod.chiselsandbits.config.common.performance.common.performance.comment": "",
-  "mod.chiselsandbits.config.server": "",
-  "mod.chiselsandbits.config.server.balancing": "",
-  "mod.chiselsandbits.config.server.balancing.comment": "",
-  "mod.chiselsandbits.config.server.balancing.server": "",
-  "mod.chiselsandbits.config.server.balancing.server.balancing": "",
-  "mod.chiselsandbits.config.server.balancing.server.balancing.bag": "",
-  "mod.chiselsandbits.config.server.balancing.server.balancing.bag.comment": "",
-  "mod.chiselsandbits.config.server.balancing.server.balancing.bag.stack-size": "",
-  "mod.chiselsandbits.config.server.balancing.server.balancing.bag.stack-size.comment": "",
-  "mod.chiselsandbits.config.server.balancing.server.balancing.bag-space": "",
+  "mod.chiselsandbits.config.common.performance.common.comment": "Configuration entries for common performance relevant systems",
+  "mod.chiselsandbits.config.common.performance.common.performance": "Performance",
+  "mod.chiselsandbits.config.common.performance.common.performance.collisions": "Collisions",
+  "mod.chiselsandbits.config.common.performance.common.performance.collisions.cache": "Cache",
+  "mod.chiselsandbits.config.common.performance.common.performance.collisions.cache.comment": "Configuration options related to the collision cache.",
+  "mod.chiselsandbits.config.common.performance.common.performance.collisions.cache.size": "Size",
+  "mod.chiselsandbits.config.common.performance.common.performance.collisions.cache.size.comment": "Configures the size of the collision box caches.",
+  "mod.chiselsandbits.config.common.performance.common.performance.collisions.comment": "Configuration entries related to the collision box performance.",
+  "mod.chiselsandbits.config.common.performance.common.performance.comment": "Configuration entries related to the common performance, of shared server and client systems.",
+  "mod.chiselsandbits.config.server": "Server",
+  "mod.chiselsandbits.config.server.balancing": "Balancing",
+  "mod.chiselsandbits.config.server.balancing.comment": "Configuration options related to balancing of C&B systems.",
+  "mod.chiselsandbits.config.server.balancing.server": "Server",
+  "mod.chiselsandbits.config.server.balancing.server.balancing": "Balancing",
+  "mod.chiselsandbits.config.server.balancing.server.balancing.bag": "BitBag",
+  "mod.chiselsandbits.config.server.balancing.server.balancing.bag.comment": "Configuration options related to balancing the bit bag.",
+  "mod.chiselsandbits.config.server.balancing.server.balancing.bag.stack-size": "Stack-Size",
+  "mod.chiselsandbits.config.server.balancing.server.balancing.bag.stack-size.comment": "Configures the stack size of a single bit slot in the bit bag.",
+  "mod.chiselsandbits.config.server.balancing.server.balancing.bag-space": "Bag-space",
   "mod.chiselsandbits.config.server.balancing.server.balancing.bag-space.comment": "",
   "mod.chiselsandbits.config.server.balancing.server.balancing.bag-space.required": "",
   "mod.chiselsandbits.config.server.balancing.server.balancing.bag-space.required.comment": "",
@@ -583,12 +607,18 @@
   "mod.chiselsandbits.config.server.troubleshooting.server.troubleshooting.logging.eligibility-errors.comment": "",
   "mod.chiselsandbits.config.server.troubleshooting.server.troubleshooting.logging.tile-errors": "",
   "mod.chiselsandbits.config.server.troubleshooting.server.troubleshooting.logging.tile-errors.comment": "",
-  "mod.chiselsandbits.config.client.gui": "",
-  "mod.chiselsandbits.config.client.gui.comment": "",
-  "mod.chiselsandbits.config.client.gui.radial-menu": "",
-  "mod.chiselsandbits.config.client.gui.radial-menu.comment": "",
-  "mod.chiselsandbits.config.client.gui.radial-menu.mouse-indicator": "",
-  "mod.chiselsandbits.config.client.gui.radial-menu.mouse-indicator.comment": "",
+  "mod.chiselsandbits.config.compat": "Compatibility",
+  "mod.chiselsandbits.config.compat.comment": "Configuration options related to the compatibility with different mods.",
+  "mod.chiselsandbits.config.compat.jei": "JEI",
+  "mod.chiselsandbits.config.compat.jei.comment": "Configuration options related to the compatibility with JEI",
+  "mod.chiselsandbits.config.compat.jei.inject-bits": "Inject Bits",
+  "mod.chiselsandbits.config.compat.jei.inject-bits.comment": "Indicates if bits should be injected or removed.",
+  "mod.chiselsandbits.config.client.gui": "Gui",
+  "mod.chiselsandbits.config.client.gui.comment": "Configures options related to the graphical user interfaces of C&B",
+  "mod.chiselsandbits.config.client.gui.radial-menu": "Radial-Menu",
+  "mod.chiselsandbits.config.client.gui.radial-menu.comment": "Configures options related to the radial menu that C&B uses to select tool modes.",
+  "mod.chiselsandbits.config.client.gui.radial-menu.mouse-indicator": "Show mouse indicator",
+  "mod.chiselsandbits.config.client.gui.radial-menu.mouse-indicator.comment": "Indicates if the mouse indicator should be rendered or not.",
   "mod.chiselsandbits.container.bit_bag": "BitBag",
   "chiselsandbits.measurements.lengths.block": "%s Blks.",
   "chiselsandbits.measurements.lengths.bit": "%s Bits.",
@@ -631,5 +661,19 @@
   "mod.chiselsandbits.pattern.modification.group.rotate": "Rotate",
   "mod.chiselsandbits.pattern.modification.across.axis.x": "X",
   "mod.chiselsandbits.pattern.modification.across.axis.y": "Y",
-  "mod.chiselsandbits.pattern.modification.across.axis.z": "Z"
+  "mod.chiselsandbits.pattern.modification.across.axis.z": "Z",
+
+  "mod.chiselsandbits.config.server.balancing.server.balancing.change-tracker": "",
+  "mod.chiselsandbits.config.server.balancing.server.balancing.change-tracker.comment": "",
+  "mod.chiselsandbits.config.server.balancing.server.balancing.change-tracker.size": "",
+  "mod.chiselsandbits.config.server.balancing.server.balancing.change-tracker.size.comment": "",
+
+  "mod.chiselsandbits.config.server.style": "",
+  "mod.chiselsandbits.config.server.style.comment": "",
+  "mod.chiselsandbits.config.server.style.server": "",
+  "mod.chiselsandbits.config.server.style.server.comment": "",
+  "mod.chiselsandbits.config.server.style.server.style": "",
+  "mod.chiselsandbits.config.server.style.server.style.bitsize": "",
+  "mod.chiselsandbits.config.server.style.server.style.bitsize.comment": "",
+  "mod.chiselsandbits.config.server.style.server.style.comment": ""
 }
