Rename the in-game display for extrusion.
Working Extrusion mode (Connected Material)

Started work on connected material

--- a/src/main/resources/assets/chiselsandbits/lang/en_us.json
+++ b/src/main/resources/assets/chiselsandbits/lang/en_us.json
@@ -65,7 +65,7 @@
   "mod.chiselsandbits.chiselmode.plane4": "4 x 4",
   "mod.chiselsandbits.chiselmode.plane8": "8 x 8",
   "mod.chiselsandbits.chiselmode.connected_plane": "Connected Plane",
-  "mod.chiselsandbits.chiselmode.connected_material": "Connected Material",
+  "mod.chiselsandbits.chiselmode.connected_material": "Extrusion",
   "mod.chiselsandbits.chiselmode.cubed": "Cube",
   "mod.chiselsandbits.chiselmode.cube_small": "Small",
   "mod.chiselsandbits.chiselmode.cube_medium": "Medium",
@@ -94,7 +94,7 @@
   "mod.chiselsandbits.chiselmode.multiline.plane4": "4 x 4",
   "mod.chiselsandbits.chiselmode.multiline.plane8": "8 x 8",
   "mod.chiselsandbits.chiselmode.multiline.connected_plane": "Connected\nPlane",
-  "mod.chiselsandbits.chiselmode.multiline.connected_material": "Connected\nMaterial",
+  "mod.chiselsandbits.chiselmode.multiline.connected_material": "Extrusion",
   "mod.chiselsandbits.chiselmode.multiline.cubed": "Cube",
   "mod.chiselsandbits.chiselmode.multiline.cube_small": "Small",
   "mod.chiselsandbits.chiselmode.multiline.cube_medium": "Medium",
